@@ -12,6 +12,7 @@ reprotest (0.7) UNRELEASED; urgency=medium
     different variations, and to make it easier to configure further builds.
   * Deprecate the --dont-vary flag, add a --vary flag for better composability.
   * Support >2 builds using the new --extra-build flag.
+  * Properly sanitize artifact_pattern to avoid arbitrary shell execution.
 
   [ Mattia Rizzolo ]
   * Bump Standards-Version to 4.0.0.
